# JOB_APPLICATION

./: .env.example  .gitignore  README.md  pyproject.toml
.browser_profiles/linkedin/: Local State
.browser_profiles/linkedin/Default/: Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
.browser_profiles/linkedin/GrShaderCache/: data_1  index
.browser_profiles/linkedin/GraphiteDawnCache/: data_0  data_1  data_2  index
.browser_profiles/linkedin/ShaderCache/: data_1  index
.browser_profiles/linkedin/segmentation_platform/: ukm_db
.github/workflows/: ci.yml
configs/: autofill_profile.yaml  core_search_matrix.yaml  direct_boards.yaml  profile.yaml  source_pages.csv  targets.yaml
docs/: browser_form_assist.md  chiara_application_strategy.md  local_runtime_setup.md  source_sourcing_playbook.md
examples/: manual_jobs_template.csv
runs/2026-06-24-no-postdoc/: README_OPEN_ME.txt  chiara_real_source_leads.csv  domain_summary.txt
scripts/: add_url.py  core_discover.py  fill_url.py  linkedin_discover.py  open_core_portals.py
src/job_agent/: cli.py  config.py  db.py  http.py  models.py  text.py
src/job_agent/applications/: prepare.py
src/job_agent/apply/: autofill.py
src/job_agent/documents/: answers.py  contact_message.py  cover_letter.py
tests/: test_autofill_profile.py  test_cover_letter_tailoring.py  test_csv_import.py  test_db.py  test_domain_fit.py  test_geo_scoring.py  test_prepare.py  test_score_job.py
(+272 files in other folders)
